--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -11,7 +11,7 @@
 <script>
 $(function(){
   var editor = ace.edit("editor");
-  editor.setTheme("ace/theme/monokai");
+  editor.setTheme("ace/theme/tomorrow-night-eighties");
   editor.getSession().setMode("ace/mode/r");
   editor.setFontSize("14px");
 
