--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -106,7 +106,7 @@ $("#runCode").click(function() {
 <style type="text/css" media="screen">
  
 #editor { 
-  position: absolute;
+  position: relative;
   top: 0px;
   left: 0px;
   width: 100%;
@@ -114,7 +114,7 @@ $("#runCode").click(function() {
 }
 
 iframe { 
-  position: absolute;
+  position: relative;
   top: 0px;
   right: 0px;
   width: 604px;
@@ -127,7 +127,9 @@ iframe {
 </style>
 </head>
 <body>
+<div id="top">
 <input type="button" value="Run code" id="runCode">
+</div>
 <div id="rmdoc">
 <div id="editor">
 Exploring data with iNZightPlots
