--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html lang="en">
 <head>
-<title>OpenCPU Markdown App</title>
+<title>iNZight rmarkdown</title>
     
 <script src="underscore-min.js"></script>    
 <script src="jquery-1.10.2.min.js"></script>
@@ -106,16 +106,16 @@ $("#runCode").click(function() {
 <style type="text/css" media="screen">
  
 #editor { 
-  position: relative;
-  top: 0px;
+  position: absolute;
+  top: 20px;
   left: 0px;
   width: 100%;
   height: 100%;
 }
 
 iframe { 
-  position: relative;
-  top: 0px;
+  position: absolute;
+  top: 20px;
   right: 0px;
   width: 604px;
   height: 100%;
@@ -139,7 +139,6 @@ Exploring data with iNZightPlots
 library(iNZightPlots)
 riodata <- read.csv("https://stat.auckland.ac.nz/~martin/rio.csv")
 iNZightPlot(Age, data=riodata, plottype="dot")
-iNZightPlot(Age, Sex, data=riodata, plottype="dot")
 ```
 </div>
 
