--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -130,7 +130,7 @@ iframe {
 </head>
 <body>
 <div id="top">
-<input type="button" value="Run code" id="runCode">
+<input type="button" value="Knit R Markdown" id="runCode">
 </div>
 <div id="rmdoc">
 <div id="editor">Exploring data with iNZightPlots
