--- a/inst/www/index.html
+++ b/inst/www/index.html
@@ -138,7 +138,7 @@ iframe {
 
 ```{r}
 library(iNZightPlots)
-riodata <- read.csv("https://stat.auckland.ac.nz/~martin/rio.csv")
+data(riodata)
 iNZightPlot(Age, data=riodata, plottype="dot")
 ```</div>
 
